# verified-venom-opt

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
artifacts/: dynvalue.json  erc20.json  erc20dyn.json  mixedkeys.json  twomaps.json
contracts/: DynValue.vy  ERC20.vy  ERC20Dyn.vy  MixedKeys.vy  TwoMaps.vy
scripts/: gen_abi_vectors.py
src/venom_opt/: __init__.py  abi.py  balance_patch.py  cli.py  compiler.py  erc20_abi.py  ir_pass.py  verified.py
tests/: test_abi.py  test_abi_vectors.py  test_cli.py  test_differential_boa.py  test_differential_dyn_boa.py  test_differential_mixed_boa.py  test_evmyullean_mapping.py  test_ir_pass.py  test_patch.py  test_value_guard.py
tests/vectors/: abi_lean_vectors.json
verification/: README.md  VenomOpt.lean  lake-manifest.json  lakefile.toml
verification/VenomOpt/: Peephole.lean
