[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venom-opt"
version = "0.1.0"
description = "Verified Venom optimization passes for Vyper contracts (peephole-first)"
readme = "README.md"
requires-python = ">=3.11,<4"  # vyper master (0.5) requires >=3.11,<4
license = { text = "MIT" }
dependencies = [
    "titanoboa @ git+https://github.com/vyperlang/titanoboa.git@master",
    "vyper @ git+https://github.com/vyperlang/vyper.git@master",
]

[project.optional-dependencies]
# the compile pipeline needs the Venom backend; the differential harness needs boa
compile = []
# `pip install -e .[test]` makes `make test` self-contained (no sibling venv needed)
test = ["pytest>=7"]

[project.scripts]
# `venom-opt` is the umbrella command; the others are facet aliases for the same tool
venom-opt = "venom_opt.cli:main"
venom-peephole = "venom_opt.cli:main"
venom-balance-patch = "venom_opt.cli:main"
verified-venom-opt = "venom_opt.cli:main"

[tool.hatch.metadata]
# vyper / titanoboa are pinned to git master (direct references)
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/venom_opt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
